--- a/src/template.html
+++ b/src/template.html
@@ -3,9 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Weather app</title>
 </head>
 <body>
-
+  <input type="text" name="location" id="location">
+  <button id="search-btn">Search</button>
 </body>
 </html>
